--- a/index.html
+++ b/index.html
@@ -207,35 +207,32 @@
 	<section id="contact" class="section green">
 		<div class="container">
 			<h4>Contactanos</h4>
-			<p>
-				Cuaquier consulta que nos quieras realizar te podes contactar por mail o con el siguiente formulario.
-			</p>
-			<div class="blankdivider30">
-			</div>
+			<p>Cuaquier consulta que nos quieras realizar te podes contactar por mail o con el siguiente formulario, o a la siguiente direccion de correo: <a ref="info@grower-lab.com">info@grower-lab.com</a></p>
+			<div class="blankdivider30"></div>
 			<div class="row">
 				<div class="span12">
 					<div class="cform" id="contact-form">
-						<div id="sendmessage">Your message has been sent. Thank you!</div>
+						<div id="sendmessage">Tu mensaje ha sido enviado. Gracias!</div>
 						<div id="errormessage"></div>
 						<form action="" method="post" role="form" class="contactForm">
 							<div class="row">
 								<div class="col-md-6">
 									<div class="field your-name form-group">
-										<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+										<input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Por favor ingrese al menos 4 caracteres" />
 										<div class="validation"></div>
 									</div>
 									<div class="field your-email form-group">
-										<input type="text" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+										<input type="text" class="form-control" name="email" id="email" placeholder="Tu email" data-rule="email" data-msg="Please enter a valid email" />
 										<div class="validation"></div>
 									</div>
 									<div class="field subject form-group">
-										<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+										<input type="text" class="form-control" name="subject" id="subject" placeholder="Titulo" data-rule="minlen:4" data-msg="Por favor escriba al menos 8 caracteres" />
 										<div class="validation"></div>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="field message form-group">
-										<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+										<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor escribinos tu consulta" placeholder="Message"></textarea>
 										<div class="validation"></div>
 									</div>
 									<input type="submit" value="Send message" class="btn btn-theme pull-left">
@@ -252,12 +249,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="span6 offset3">
-					<ul class="social-networks">
+					<!-- <ul class="social-networks">
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 		</div>
