--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	<section id="contact" class="section green">
 		<div class="container">
 			<h4>Contactanos</h4>
-			<p>Cuaquier consulta que nos quieras realizar te podes contactar por mail o con el siguiente formulario, o a la siguiente direccion de correo: <a ref="info@grower-lab.com">info@grower-lab.com</a></p>
+			<p>Cuaquier consulta que nos quieras realizar te podes contactar por mail o con el siguiente formulario, o a la siguiente direccion de correo: <a href="mailto:info@grower-lab.com?Subject=Consulta">info@grower-lab.com</a></p>
 			<div class="blankdivider30"></div>
 			<div class="row">
 				<div class="span12">
